5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1635_2704.log
== SUBMITION (2019-04-10 13:44:37) 
-- CODE:
var = float(input("nota do açuno"))
opcao = input("bonificacao (S/N)")

if (opcao == "S")
   var = nota + 10/100 * var
print(float(var))
	
	
-- EXECUTION TIME:
0.158782
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 4
    if (opcao == "S")
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:44:49) 
-- CODE:
var = float(input("nota do açuno"))
opcao = input("bonificacao (S/N)")

if (opcao == "S")
   var = nota + 10//100 * var
print(float(var))
	
	
-- EXECUTION TIME:
0.157038
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 4
    if (opcao == "S")
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:44:50) 
-- CODE:
var = float(input("nota do açuno"))
opcao = input("bonificacao (S/N)")

if (opcao == "S")
   var = nota + 10//100 * var
print(float(var))
	
	
-- ERROR:
File "XXXX", line 4
    if (opcao == "S")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:44:57) 
-- CODE:
var = float(input("nota do açuno"))
opcao = input("bonificacao (S/N)")

if (opcao == "S"):
   var = nota + 10//100 * var
print(float(var))
	
	
-- EXECUTION TIME:
0.214311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 5, in <module>
    var = nota + 10//100 * var
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:44:59) 
-- CODE:
var = float(input("nota do açuno"))
opcao = input("bonificacao (S/N)")

if (opcao == "S"):
   var = nota + 10//100 * var
print(float(var))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = nota + 10//100 * var
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:18:54) 
-- CODE:
n = float(input("nota do aluno"))
b = input("bonificacao (S/N)")

if (b.upper()== "S")
   nf = n + (10 / 100 * n)
else:	
	nf = n
print(nf)	
	

	
	
-- ERROR:
File "XXXX", line 4
    if (b.upper()== "S")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:18:59) 
-- CODE:
n = float(input("nota do aluno"))
b = input("bonificacao (S/N)")

if (b.upper()== "S"):
   nf = n + (10 / 100 * n)
else:	
	nf = n
print(nf)	
	

	
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:19:13) 
-- CODE:
n = float(input("nota do aluno"))
b = input("bonificacao (S/N)")

if (b.upper()== "S"):
   nf = n + (10 / 100 * n)
else:	
	nf = n
print(nf)	
	

	
	
-- EXECUTION TIME:
0.127161
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
